[project]
name = "test_availability_hda"
version = "0.1.1"
description = "Script for testing availability of data via hda"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
  {name = "Guillaume Koenig", email = "gkoenig@mercator-ocean.fr"}
]
dependencies = [
  "hda==2.34",
  "pandas>=2.0,<3", 
  "mkdocs==1.6.1",
  "dotenv>=1.0",
  "tabulate>=0.9.0",
  "sqlalchemy>=2.0.0",
  "uuid>=1.3.0",
  "dotenv>=1.1.0",
  "datetime>=5.5",
  "psycopg2>=2.9",
  "distro>=1.9.0",
  ]

[project.optional-dependencies]
dev = ["mkdocs"]